서버 수정